# CProjects

./: .gitignore  README.md
C GUI Programming/: pointers.c  pointers2.c
Kattis/001-Hello World/: hello.c
Kattis/002-Solve For Carrots/: carrots.c
Kattis/003-R2/: r2.c
Kattis/004-Quadrant Selection/: qs.c
Kattis/005-Last Factorial Digit/: lfd.c
Kattis/006-Filip/: filip.c
Kattis/007-Faktor/: faktor.c
Kattis/008-Bijele/: bijele.c
Kattis/009-Autori/: autori.c
Kattis/010-Tarifa/: tarifa.c
Kattis/011-Take Two Stones/: tts.c
Kattis/012-Stuck in a time loop/: siatl.c
Kattis/013-Spavanac/: spavanac.c
Kattis/015-Oddities/: oddities.c
Kattis/017-Cold-Puter Science/: cps.c
Kattis/018-Sibice/: sibice.c
Kattis/020-Planina/: planina.c
TempConversion/: convert.c
URI/URI_1001/: main.c
URI/URI_1002/: main.c
URI/URI_1003/: main.c
URI/URI_1004/: main.c
URI/URI_1005/: main.c
URI/URI_1006/: main.c
URI/URI_1007/: main.c
URI/URI_1008/: main.c
URI/URI_1009/: main.c
URI/URI_1010/: main.c
URI/URI_1011/: main.c
URI/URI_1012/: main.c
URI/URI_1013/: main.c
URI/URI_1014/: main.c
URI/URI_1015/: main.c
URI/URI_1016/: main.c
URI/URI_1017/: main.c
URI/URI_1018/: main.c
URI/URI_1019/: main.c
URI/URI_1020/: main.c
URI/URI_1021/: main.c
URI/URI_1022/: main.c
c_gui_programming/: compareStrings.c  compareSubstrings.c  stringPointers.c  writingToStrings.c
programs/todo_list/: CMakeLists.txt  elements.hpp  main.cpp
programs/todo_list/elements/: item.hpp  list.hpp  list_item.hpp  list_section.hpp  todo_list.hpp
(+79 files in other folders)
